tests/NormalTests/paczka2/big_fuzzy/82787272.err
Error in line 1: f1deUXG A720 86,0
Error in line 7: kON A167 173,04
Error in line 11: QJnOkM S564 44,2
Error in line 3: kON A167 70,2
Error in line 14: QJnOkM A720 67,7
Error in line 20: yLAlGf S564 82,5
Error in line 22: yLAlGf A821 19,8
Error in line 27: yLAlGf A167 88,3
Error in line 37: q71rVVFXB A821 93,3
Error in line 44: q71rVVFXB A720 76,4
Error in line 57: f1deUXG A167 64,2
Error in line 59: kON S564 6,9
Error in line 41: yLAlGf A821 35,4
Error in line 76: 1qGqJ6Rsi A821 91,8
Error in line 95: f1deUXG S564 -4,5
Error in line 89: 1qGqJ6Rsi S564 72,0
Error in line 90: A720 S564 36,9
Error in line 107: q71rVVFXB A167 40,5
Error in line 120: 1qGqJ6Rsi A167 16,7
Error in line 119: A720 A167 161,8
Error in line 128: kON A821 -2,5
Error in line 121: 1qGqJ6Rsi S564 63,3
Error in line 126: A720 A821 7,3
Error in line 130: q71rVVFXB A821 51,7
Error in line 148: yLAlGf A720 87,5
Error in line 158: yLAlGf S564 -1,3
Error in line 160: f1deUXG A821 -2,8
Error in line 156: yLAlGf S564 65,3
Error in line 178: f1deUXG A821 77,91
Error in line 171: q71rVVFXB S564 21,5
Error in line 184: A720 A167 178,5
Error in line 182: kON A167 0,4
Error in line 186: A720 A821 58,4
Error in line 180: QJnOkM A720 48,1
Error in line 202: q71rVVFXB A821 1,58
Error in line 214: yLAlGf S564 91,4
Error in line 220: QJnOkM A720 28,7
Error in line 210: q71rVVFXB A821 4,1
Error in line 231: q71rVVFXB A167 81,3
Error in line 237: yLAlGf A821 -2,5
Error in line 239: f1deUXG A167 61,00
Error in line 234: yLAlGf A821 38,5
Error in line 242: QJnOkM S564 47,6
